change index file

--- a/index.html
+++ b/index.html
@@ -243,7 +243,7 @@
                     </div>
                     <div class="contact-details">
                         <h3>LinkedIn</h3>
-                        <a href="#">linkedin.com/in/yourprofile</a>
+                        <a href="#">linkedin.com/in/heshan-witharana</a>
                     </div>
                 </div>
                 <div class="contact-item">
